updated updateStreamState api
